# backend/src/routes/auth.routes.ts
@@ -1,11 +1,11 @@
 import { Router } from 'express'
-import { authMiddleware } from '../middlewares/auth.middleware'
 import { authController } from '../controllers/auth.controller'
 
 export const authRouter = Router()
 
 authRouter.post('/login', authController.login)
 authRouter.post('/login-cliente', authController.loginCliente)
+authRouter.get('/csrf', authController.csrf)
 authRouter.post('/refresh', authController.refresh)
-authRouter.post('/logout', authMiddleware, authController.logout)
+authRouter.post('/logout', authController.logout)
 authRouter.get('/health', authController.health)
